--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,20 @@ storybook.log
 
 # local files
 _local-files/
+
+# macOS metadata
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon files and resource forks
+Icon?
+._*
+
+# Spotlight and Finder metadata
+.Spotlight-V100
+.Trashes
+
+# macOS volume and disk image metadata
+.VolumeIcon.icns
+*.AppleDouble
