--- a/package.json
+++ b/package.json
@@ -22,26 +22,33 @@
     "@emotion/styled": "^11.13.0",
     "@formatjs/intl": "^3.0.4",
     "@headlessui/react": "^2.2.0",
+    "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "next": "^15.0.3",
     "next-intl": "^3.25.0",
     "next-router-mock": "^0.9.13",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
@@ -62,6 +69,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.15",
+    "terser-brunch": "^4.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
