--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,7 +62,7 @@
     "**/*.tsx",
     "next-env.d.ts",
     ".next/types/**/*.ts"
-, "next.config.js", "next-sitemap.config.js"  ],
+, "next.config.js", "next-sitemap.config.js", "services/motion/mediapipe.ts.bak2", "services/motion/mediapipe.ts.bak"  ],
   "exclude": [
     "node_modules"
   ]
