--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@formatjs/intl": "^3.0.4",
     "@headlessui/react": "^2.2.0",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
+    "@radix-ui/react-label": "^2.1.7",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
