--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/tasks-vision": "^0.10.17",
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
     "next": "15.4.4",
