--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "babylonjs": "^8.34.1",
     "babylonjs-loaders": "^8.34.1",
+    "framer-motion": "^12.23.24",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
