--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mediapipe/holistic": "^0.5.1675471629",
+    "@mediapipe/objectron": "^0.4.1675468480",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "babylonjs": "^8.34.1",
     "babylonjs-loaders": "^8.34.1",
