--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@mediapipe/holistic": "^0.5.1675471629",
     "@mediapipe/objectron": "^0.4.1675468480",
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
-    "babylonjs": "^8.34.1",
-    "babylonjs-loaders": "^8.34.1",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
+    "@tensorflow/tfjs": "^4.15.0",
     "framer-motion": "^12.23.24",
     "next": "15.5.2",
     "react": "19.1.0",
